<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>slict</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tmn@todo.todo">tmn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>rclpy</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ROS packages -->
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- External packages -->
  <depend>cf_msgs</depend>
  <depend>livox_ros_driver2</depend>

  <!-- Execution dependencies -->
  <exec_depend>run_lio_sim.py</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- For the python node -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
    <!-- <meshes>meshes/cartinbot_viz.stl</meshes> -->
  </export>

</package>
